proyecto_prueba/trial_project.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mi-namespace
