proyecto_prueba/trial_project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trial-project-ingress
  namespace: mi-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
